@startuml

title __SERVICE's Class Diagram__\n

  namespace io.radien.ms.usermanagement {
    namespace service {
      class io.radien.ms.usermanagement.service.KeycloakClient {
          {static} - CLIENT_ID : String
          {static} - GRANT_TYPE : String
          {static} - REFRESH_TOKEN : String
          - clientId : String
          - idpUrl : String
          {static} - log : Logger
          - password : String
          - radienClientId : String
          - radienSecret : String
          - radienTokenPath : String
          - result : HashMap<String, String>
          - tokenPath : String
          - userPath : String
          - username : String
          + KeycloakClient()
          + clientId()
          + createUser()
          + deleteUser()
          + getAccessToken()
          + getRefreshToken()
          + idpUrl()
          + login()
          + password()
          + radienClientId()
          + radienSecret()
          + radienTokenPath()
          + refreshToken()
          + refreshToken()
          + sendUpdatePasswordEmail()
          + tokenPath()
          + updateUser()
          + userPath()
          + username()
          - getAuthorization()
      }
    }
  }
  

  namespace io.radien.ms.usermanagement {
    namespace service {
      class io.radien.ms.usermanagement.service.KeycloakFactory {
          {static} + convertToUserRepresentation()
          - KeycloakFactory()
      }
    }
  }
  

  namespace io.radien.ms.usermanagement {
    namespace service {
      class io.radien.ms.usermanagement.service.KeycloakService {
          + createUser()
          + deleteUser()
          + refeshToken()
          + sendUpdatePasswordEmail()
          + updateUser()
          - getKeycloakClient()
          - getProperty()
      }
    }
  }
  

  namespace io.radien.ms.usermanagement {
    namespace service {
      class io.radien.ms.usermanagement.service.UserBusinessService {
          {static} - serialVersionUID : long
          + create()
          + delete()
          + get()
          + get()
          + getAll()
          + getUserId()
          + getUsers()
          + refreshToken()
          + save()
          + sendUpdatePasswordEmail()
      }
    }
  }
  

  namespace io.radien.ms.usermanagement {
    namespace service {
      class io.radien.ms.usermanagement.service.UserResource {
          {static} - log : Logger
          + checkUserRoles()
          + create()
          + delete()
          + getAll()
          + getById()
          + getUserIdBySub()
          + getUsers()
          + isSelfOnboard()
          + refreshToken()
          + save()
          + sendUpdatePasswordEmail()
          # getCurrentUserIdBySub()
          - getResponseFromException()
      }
    }
  }
  

  namespace io.radien.ms.usermanagement {
    namespace service {
      class io.radien.ms.usermanagement.service.UserService {
          - em : EntityManager
          {static} - log : Logger
          {static} - serialVersionUID : long
          + create()
          + delete()
          + delete()
          + get()
          + get()
          + getAll()
          + getUserId()
          + getUserList()
          + getUsers()
          + save()
          - addNewFoundIssue()
          - getCount()
          - getFieldPredicate()
          - getFilteredPredicate()
          - populateParametersAndFindIssues()
          - retrieveDataFromDB()
          - retrieveIssues()
          - searchDuplicatedEmailOrLogon()
          - seekForIssue()
          - validateUniquenessRecords()
      }
    }
  }
  

  io.radien.ms.usermanagement.service.UserBusinessService .up.|> java.io.Serializable
  io.radien.ms.usermanagement.service.UserBusinessService o-- io.radien.ms.usermanagement.service.KeycloakService : keycloakService
  io.radien.ms.usermanagement.service.UserBusinessService o-- io.radien.api.service.user.UserServiceAccess : userServiceAccess
  io.radien.ms.usermanagement.service.UserResource .up.|> io.radien.ms.usermanagement.client.services.UserResourceClient
  io.radien.ms.usermanagement.service.UserResource -up-|> io.radien.ms.authz.security.AuthorizationChecker
  io.radien.ms.usermanagement.service.UserResource o-- io.radien.ms.usermanagement.service.UserBusinessService : userBusinessService
  io.radien.ms.usermanagement.service.UserService .up.|> io.radien.api.service.user.UserServiceAccess
  io.radien.ms.usermanagement.service.UserService -up-|> io.radien.api.util.ModelServiceUtil


 

@enduml
